Adds synchronisation of Comments between Piwigo and LrC

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ piwigoPublish.lrplugin/icons/piwigoPublish_1_5-assets/
 piwigoPublish.lrplugin/icons/piwigoPublish_2_0-assets/
 piwigoPublish.lrplugin/icons/piwigoPublish_1_0.psd
 piwigoPublish.lrplugin/icons/*psd
-
+piwigoPublish.lrplugin/lrcUtils.lua 
+piwigoPublish.lrplugin/PiwigoHelper.lua 
 
 # Other files
 cat layout.odt
